--- a/css/style.css
+++ b/css/style.css
@@ -370,4 +370,383 @@ nav {
             transform: translateY(0);
   }
 }
+
+@media (max-width: 576px) {
+  html, body {
+    font-size: 30%;
+    text-align: center;
+  }
+  nav, .side-nav, .venue-img {
+    display: none;
+  }
+  .hero-section-text-wrapper {
+    height: 50%;
+    width: 100%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hero-section-text-wrapper h1 {
+    line-height: 100%;
+    margin-bottom: 2rem;
+  }
+  .hero-section-text-wrapper h2 {
+    font-size: 5rem;
+  }
+  .hero-section-text-wrapper h2, .hero-section-text-wrapper h3 {
+    position: relative;
+    top: -15%;
+    padding: 0 2rem;
+  }
+  #arrow {
+    position: relative;
+    top: 20%;
+    left: 0%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  .venue-section {
+    background-image: url("../images/Venue-img.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .venue-section .venue-card {
+    width: 80%;
+    left: 0%;
+  }
+  .venue-section .venue-card h1 {
+    line-height: 40px;
+  }
+  .info-section .info-card {
+    width: 33%;
+  }
+  .info-section .info-card h1 {
+    font-size: 3.5rem;
+  }
+  .info-section .info-card-click-text {
+    width: 50%;
+    position: relative;
+    top: 50%;
+    left: 35%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    position: absolute;
+  }
+  .info-section #socialText {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 60%;
+  }
+  .info-section #socialText li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 120%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  html, body {
+    font-size: 60%;
+    text-align: center;
+  }
+  nav, .side-nav, .venue-img {
+    display: none;
+  }
+  .hero-section-text-wrapper {
+    height: 50%;
+    width: 100%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hero-section-text-wrapper h1 {
+    line-height: 100%;
+    margin-bottom: 4rem;
+  }
+  .hero-section-text-wrapper h2 {
+    font-size: 5rem;
+  }
+  .hero-section-text-wrapper h2, .hero-section-text-wrapper h3 {
+    position: relative;
+    top: -15%;
+    padding: 0 2rem;
+  }
+  #arrow {
+    position: relative;
+    top: 20%;
+    left: 0%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  .venue-section {
+    background-image: url("../images/Venue-img.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .venue-section .venue-card {
+    width: 80%;
+    left: 0%;
+  }
+  .venue-section .venue-card h1 {
+    line-height: 60px;
+  }
+  .info-section .info-card {
+    width: 33%;
+  }
+  .info-section .info-card h1 {
+    font-size: 3.5rem;
+  }
+  .info-section .info-card-click-text {
+    width: 50%;
+    position: relative;
+    top: 50%;
+    left: 35%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    position: absolute;
+  }
+  .info-section #socialText {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 60%;
+  }
+  .info-section #socialText li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 120%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 992px) {
+  html, body {
+    font-size: 60%;
+    text-align: center;
+  }
+  nav, .side-nav, .venue-img {
+    display: none;
+  }
+  .hero-section-text-wrapper {
+    height: 50%;
+    width: 100%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hero-section-text-wrapper h1 {
+    line-height: 100%;
+    margin-bottom: 4rem;
+  }
+  .hero-section-text-wrapper h2 {
+    font-size: 5rem;
+  }
+  .hero-section-text-wrapper h2, .hero-section-text-wrapper h3 {
+    position: relative;
+    top: -15%;
+    padding: 0 2rem;
+  }
+  #arrow {
+    position: relative;
+    top: 20%;
+    left: 0%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  .venue-section {
+    background-image: url("../images/Venue-img.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .venue-section .venue-card {
+    width: 80%;
+    left: 0%;
+  }
+  .venue-section .venue-card h1 {
+    line-height: 60px;
+  }
+  .info-section .info-card {
+    width: 33%;
+  }
+  .info-section .info-card h1 {
+    font-size: 3.5rem;
+  }
+  .info-section .info-card-click-text {
+    width: 50%;
+    position: relative;
+    top: 50%;
+    left: 35%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    position: absolute;
+  }
+  .info-section #socialText {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 60%;
+  }
+  .info-section #socialText li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 120%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 1200px) {
+  .venue-section {
+    position: relative;
+    background-color: #151515;
+    border: 2px solid #000000;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .venue-section .venue-card {
+    height: 80%;
+    width: 50%;
+    z-index: 1;
+  }
+  .venue-section .venue-card h1 {
+    font-size: 3.4rem;
+    line-height: 50px;
+  }
+  .venue-section .venue-card #address {
+    font-size: 3.4rem;
+    color: #ffffff;
+  }
+  .venue-section .venue-card #info {
+    font-size: 2.4rem;
+    line-height: 165.2%;
+  }
+  .venue-section img {
+    height: 75%;
+    width: 75%;
+  }
+  .venue-section .venue-card, .venue-section img {
+    position: relative;
+    left: 20%;
+  }
+  .side-nav {
+    width: 10%;
+  }
+  .info-section .info-card h1 {
+    font-size: 3rem;
+  }
+}
 /*# sourceMappingURL=style.css.map */
