--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
 }
 
 html, body {
-  font-size: 62.5%;
   scroll-behavior: smooth;
 }
 
@@ -20,135 +19,40 @@ section {
   width: 100%;
 }
 
-h1, h2, h3, h4 {
+h1, h2 {
   color: #EF0ACC;
-  font-family: 'Bungee Shade';
+  font-family: 'Bungee Shade', cursive;
+  font-weight: 100;
 }
 
 h1 {
-  font-size: 9.6rem;
+  font-size: 2.25rem;
 }
 
 h2 {
-  font-size: 6.4rem;
-  opacity: 75%;
-}
-
-h3 {
-  font-size: 3.4rem;
-  opacity: 75%;
-  font-family: 'Caveat', cursive;
-}
-
-h4 {
-  font-size: 1rem;
-}
-
-h5 {
-  font-size: 9.6rem;
+  font-size: 1.5rem;
 }
 
 p {
-  color: #c5c5c5;
-  font-family: "Sansation", sans-serif;
+  font-size: 1rem;
+  color: #cccccc;
+  font-family: 'Sansation', cursive;
 }
 
 a {
   text-decoration: none;
-  font-family: 'Codystar', cursive;
-  color: #ffffff;
-}
-
-a:hover {
   color: #EF0ACC;
+  font-family: 'Codystar', cursive;
 }
 
 ul {
   list-style: none;
 }
 
-li {
-  font-size: 3rem;
-  font-family: "Roboto", sans-serif;
-}
-
-.active {
-  color: #EF0ACC;
-}
-
-.hero-section {
+#hero-section {
   background-image: url("../images/Hero-img.png");
-  background-repeat: no-repeat;
+  background-position: bottom;
   background-size: cover;
-  background-position: center;
-}
-
-.hero-section-text-wrapper {
-  height: 50%;
-  width: 100%;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.hero-section-text-wrapper h2, .hero-section-text-wrapper h3 {
-  position: relative;
-  top: -15%;
-}
-
-#arrow {
-  position: relative;
-  top: 25%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  opacity: 1;
-  -webkit-animation: arrow 2s alternate ease-in-out infinite;
-          animation: arrow 2s alternate ease-in-out infinite;
-}
-
-nav {
-  position: absolute;
-  bottom: 0%;
-  left: 0%;
-  height: 9.1rem;
-  width: 100%;
-  background-color: #15151577;
-  font-size: 3.4rem;
-  text-align: center;
-  border: 2px solid #000000;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.venue-section {
-  position: relative;
-  background-color: #151515;
-  border: 2px solid #000000;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -158,24 +62,80 @@ nav {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.venue-section .venue-card {
-  position: relative;
-  top: 0%;
-  left: 2%;
-  height: 75%;
-  width: 25%;
-  padding: 5rem;
+#hero-section nav {
+  position: absolute;
+  display: none;
+}
+
+.hero-text-wrapper {
+  height: 40%;
   text-align: center;
+  margin-bottom: 5rem;
+  padding: 0 1rem;
+  position: relative;
+  top: 40%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.hero-text-wrapper #main-text {
+  line-height: 50px;
+  margin-bottom: 1rem;
+}
+
+.hero-text-wrapper #slogan {
+  font-family: 'Caveat', cursive;
+}
+
+#arrow {
+  position: relative;
+  top: 10%;
+  left: 5%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-animation: arrow 2s ease-in-out alternate infinite;
+          animation: arrow 2s ease-in-out alternate infinite;
+}
+
+#venue-section {
+  background-color: #151515;
+  background-color: #151515;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 48 48'%3E%3Cg fill='%23222222' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M5 3.59L1.46.05.05 1.46 3.59 5 .05 8.54l1.41 1.41L5 6.41l3.54 3.54 1.41-1.41L6.41 5l3.54-3.54L8.54.05 5 3.59zM17 2h24v2H17V2zm0 4h24v2H17V6zM2 17h2v24H2V17zm4 0h2v24H6V17z'/%3E%3C/g%3E%3C/svg%3E");
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#venue-section #venue-img {
+  display: none;
+}
+
+.venue-text-wrapper {
+  height: 80%;
+  width: 80%;
+  padding: 1rem;
   background-color: #222222;
-  border: 5px solid #000000;
-  -webkit-box-shadow: -50px 50px 0px 1px rgba(0, 0, 0, 0.25);
-          box-shadow: -50px 50px 0px 1px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  -webkit-box-shadow: -10px 20px 0px 0px #77777777;
+          box-shadow: -10px 20px 0px 0px #77777777;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -190,45 +150,26 @@ nav {
           flex-direction: column;
 }
 
-.venue-section .venue-card h1 {
-  font-size: 6.4rem;
-  line-height: 77px;
+.venue-text-wrapper #address {
+  font-family: 'Sansation', cursive;
+  color: white;
 }
 
-.venue-section .venue-card #address {
-  font-size: 3.4rem;
-  color: #ffffff;
-}
-
-.venue-section .venue-card #info {
-  font-size: 2.4rem;
-  line-height: 165.2%;
-}
-
-.side-nav {
+.navbar {
   position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #111111;
-  height: 100%;
-  width: 7%;
-  font-family: 'Codystar', cursive;
-  color: #ffffff;
-  border-right: 2px solid #000000;
+  display: none;
 }
 
-.side-nav .side-nav-wrapper {
+#info-section {
+  position: relative;
+  background-color: #111111;
+  border-top: 2px solid #000000;
   text-align: center;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  line-height: 50px;
 }
 
-.info-section {
-  position: relative;
-  background-color: #111111;
+.info-card-wrapper {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -244,27 +185,17 @@ nav {
           flex-direction: column;
 }
 
-.info-section #info-nav {
-  background-color: #151515;
-}
-
-.info-section .info-card {
+.info-card {
   height: 25%;
-  width: 20%;
-  background-color: #222222;
-  border-left: 2px solid #000000;
-  border-bottom: 2px solid #000000;
-  cursor: pointer;
+  width: 33%;
+  background-color: #151515;
+  border: 1px solid #000000;
 }
 
-.info-section .info-card:hover {
-  border-left: 2px solid #EF0ACC;
-}
-
-.info-section .info-card h1 {
-  font-size: 4.5rem;
-  text-align: center;
-  line-height: 6.4rem;
+.info-card h1 {
+  font-size: 1rem;
+  line-height: 25px;
+  padding: 0 0.1rem;
   color: white;
   position: relative;
   top: 50%;
@@ -273,36 +204,30 @@ nav {
           transform: translate(-50%, -50%);
 }
 
-.info-section .info-card .info-active {
-  color: #EF0ACC;
-}
-
-.info-section #bottom-info-card {
-  border-bottom: none;
-}
-
-.info-section .info-card-click-text {
-  font-size: 6.4rem;
+.faq-text {
   position: relative;
   top: 50%;
-  left: 45%;
+  left: 35%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   position: absolute;
+  color: #EF0ACC;
+  font-family: 'Caveat', cursive;
   opacity: 0;
   -webkit-transition: all 1s;
   transition: all 1s;
 }
 
-.info-section #menu-text h3 {
-  font-size: 6.4rem;
-}
-
-.info-section .info-card-click-active {
+.info-card-click-active {
   opacity: 1;
 }
 
-.info-section #socialText {
+.info-active {
+  border-left: 1px solid #EF0ACC;
+}
+
+#social-text {
+  height: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -315,438 +240,29 @@ nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 25%;
-}
-
-.info-section #socialText li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  width: 120%;
-  height: 100%;
 }
 
 @-webkit-keyframes arrow {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
   }
   50% {
     opacity: 1;
-    -webkit-transform: translateY(50%);
-            transform: translateY(50%);
   }
   100% {
     opacity: 0;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
   }
 }
 
 @keyframes arrow {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
   }
   50% {
     opacity: 1;
-    -webkit-transform: translateY(50%);
-            transform: translateY(50%);
   }
   100% {
     opacity: 0;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-
-@media (max-width: 576px) {
-  html, body {
-    font-size: 30%;
-    text-align: center;
-  }
-  nav, .side-nav, .venue-img {
-    display: none;
-  }
-  .hero-section-text-wrapper {
-    height: 50%;
-    width: 100%;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .hero-section-text-wrapper h1 {
-    line-height: 100%;
-    margin-bottom: 2rem;
-  }
-  .hero-section-text-wrapper h2 {
-    font-size: 5rem;
-  }
-  .hero-section-text-wrapper h2, .hero-section-text-wrapper h3 {
-    position: relative;
-    top: -15%;
-    padding: 0 2rem;
-  }
-  #arrow {
-    position: relative;
-    top: 20%;
-    left: 0%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-  }
-  .venue-section {
-    background-image: url("../images/Venue-img.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  }
-  .venue-section .venue-card {
-    width: 80%;
-    left: 0%;
-  }
-  .venue-section .venue-card h1 {
-    line-height: 40px;
-  }
-  .info-section .info-card {
-    width: 33%;
-  }
-  .info-section .info-card h1 {
-    font-size: 3.5rem;
-  }
-  .info-section .info-card-click-text {
-    width: 50%;
-    position: relative;
-    top: 50%;
-    left: 35%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    position: absolute;
-  }
-  .info-section #socialText {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    height: 60%;
-  }
-  .info-section #socialText li {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 120%;
-    height: 100%;
-  }
-}
-
-@media (max-width: 768px) {
-  html, body {
-    font-size: 60%;
-    text-align: center;
-  }
-  nav, .side-nav, .venue-img {
-    display: none;
-  }
-  .hero-section-text-wrapper {
-    height: 50%;
-    width: 100%;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .hero-section-text-wrapper h1 {
-    line-height: 100%;
-    margin-bottom: 4rem;
-  }
-  .hero-section-text-wrapper h2 {
-    font-size: 5rem;
-  }
-  .hero-section-text-wrapper h2, .hero-section-text-wrapper h3 {
-    position: relative;
-    top: -15%;
-    padding: 0 2rem;
-  }
-  #arrow {
-    position: relative;
-    top: 20%;
-    left: 0%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-  }
-  .venue-section {
-    background-image: url("../images/Venue-img.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  }
-  .venue-section .venue-card {
-    width: 80%;
-    left: 0%;
-  }
-  .venue-section .venue-card h1 {
-    line-height: 60px;
-  }
-  .info-section .info-card {
-    width: 33%;
-  }
-  .info-section .info-card h1 {
-    font-size: 3.5rem;
-  }
-  .info-section .info-card-click-text {
-    width: 50%;
-    position: relative;
-    top: 50%;
-    left: 35%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    position: absolute;
-  }
-  .info-section #socialText {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    height: 60%;
-  }
-  .info-section #socialText li {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 120%;
-    height: 100%;
-  }
-}
-
-@media (max-width: 992px) {
-  html, body {
-    font-size: 60%;
-    text-align: center;
-  }
-  nav, .side-nav, .venue-img {
-    display: none;
-  }
-  .hero-section-text-wrapper {
-    height: 50%;
-    width: 100%;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .hero-section-text-wrapper h1 {
-    line-height: 100%;
-    margin-bottom: 4rem;
-  }
-  .hero-section-text-wrapper h2 {
-    font-size: 5rem;
-  }
-  .hero-section-text-wrapper h2, .hero-section-text-wrapper h3 {
-    position: relative;
-    top: -15%;
-    padding: 0 2rem;
-  }
-  #arrow {
-    position: relative;
-    top: 20%;
-    left: 0%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-  }
-  .venue-section {
-    background-image: url("../images/Venue-img.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  }
-  .venue-section .venue-card {
-    width: 80%;
-    left: 0%;
-  }
-  .venue-section .venue-card h1 {
-    line-height: 60px;
-  }
-  .info-section .info-card {
-    width: 33%;
-  }
-  .info-section .info-card h1 {
-    font-size: 3.5rem;
-  }
-  .info-section .info-card-click-text {
-    width: 50%;
-    position: relative;
-    top: 50%;
-    left: 35%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    position: absolute;
-  }
-  .info-section #socialText {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    height: 60%;
-  }
-  .info-section #socialText li {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 120%;
-    height: 100%;
-  }
-}
-
-@media (max-width: 1200px) {
-  .venue-section {
-    position: relative;
-    background-color: #151515;
-    border: 2px solid #000000;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .venue-section .venue-card {
-    height: 80%;
-    width: 50%;
-    z-index: 1;
-  }
-  .venue-section .venue-card h1 {
-    font-size: 3.4rem;
-    line-height: 50px;
-  }
-  .venue-section .venue-card #address {
-    font-size: 3.4rem;
-    color: #ffffff;
-  }
-  .venue-section .venue-card #info {
-    font-size: 2.4rem;
-    line-height: 165.2%;
-  }
-  .venue-section img {
-    height: 75%;
-    width: 75%;
-  }
-  .venue-section .venue-card, .venue-section img {
-    position: relative;
-    left: 20%;
-  }
-  .side-nav {
-    width: 10%;
-  }
-  .info-section .info-card h1 {
-    font-size: 3rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
