--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ ul {
 }
 
 .hero-text-wrapper {
-  height: 50%;
+  height: 30%;
   text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -82,9 +82,8 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
