--- a/css/_index.scss
+++ b/css/_index.scss
@@ -61,6 +61,10 @@
     box-shadow: -10px 20px 0px 0px #77777777;
     @include flex(center, space-around, column);
 
+    #comeVisit {
+        line-height: 50px;
+    }
+
     #address {
         font-family: 'Sansation', cursive;
         color: white;
