--- a/css/_index.scss
+++ b/css/_index.scss
@@ -82,8 +82,6 @@
     border-top: 2px solid #000000;
     text-align: center;
     line-height: 50px;
-
-    
 }
 
 .info-card-wrapper {
@@ -128,6 +126,14 @@
 #social-text {
     height: 50%;
     @include flex(center, space-around, column);
+}
+
+// For Vertically Longer Screens
+
+@media (min-height: 700px) { 
+    .venue-text-wrapper {
+        min-height: 50%;
+    }
 }
 
 
