--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,11 @@ $header1: 2.25rem;
 $header2: 1.5rem;
 $text: 1rem;
 
+$header1-computer: 6rem;
+$header2-computer: 4rem;
+$header3-computer: 3rem;
+$text-computer: 2.125rem;
+
 
 $bg_dark: #111111;
 $bg_light: #151515;
